--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="social-icons">
+                <a href="https://instagram.com/aalok__sharma007" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/MasterAalok" target="_blank"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="copyright">
+                &copy; 2025 Alok Kumar. All rights reserved.
+            </div>
+        </footer>
+
     </header>
 
 
