--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
         </section>
         <footer>
             <div class="social-icons">
-                <a href="https://instagram.com/aalok__sharma007" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/MasterAalok" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://instagram.com/aalok__sharma007" target="blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://github.com/MasterAalok" target="blank">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
             <div class="copyright">
                 &copy; 2025 Alok Kumar. All rights reserved.
             </div>
         </footer>
-
     </header>
 
 
