--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </section>
         <footer>
             <div class="social-icons">
-                <a href="https://instagram.com/aalok__sharma007" target="blank">
+                <a href="https://instagram.com/aalok__sharma007" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://github.com/MasterAalok" target="blank">
+                <a href="https://github.com/MasterAalok" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
